--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Cumulio.addDashboard({
 }); 
 </script>
 
-		<div class=container>
+	<div class=container>
 		<div class="row">
 			<div class="card-white" class="clo-12 col-sm-6 col-lg-4">
 				<img src="images/productivity.png" alt="productivity">
@@ -51,8 +51,8 @@ Cumulio.addDashboard({
 	<div class="footer">
 		<p>This data was collected by Datawine</p>
 
-		<iframe src="https://www.youtube.com/embed/zR__8wSZUgU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/zR__8wSZUgU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		
 		<ul>
 			<div class="row">
 				<li class="list-inline">
