--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@ Cumulio.addDashboard({
 			</div>
 
 			<div class="card-white" class="clo-12 col-sm-6 col-lg-4">
-				<img src="images/target.png" alt="precision">
+				<img src="images/precision.png" alt="precision">
 				<h2>Precision</h2>
 				<p>Take better agricultural decisions</p>
 			</div>
 
 			<div class="card-white" class="clo-12 col-sm-6 col-lg-4">
-				<img src="images/test.png" alt="communication">
+				<img src="images/communication.png" alt="communication">
 				<h2>Communication</h2>
 				<p>Track your results with your team</strong></p>
 			</div>
@@ -49,9 +49,10 @@ Cumulio.addDashboard({
 	</div>
 
 	<div class="footer">
-		<p>This data was collected by Datawine</p>
-
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/zR__8wSZUgU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<p>This data was collected by Datawine</p>
+		<div class="container"> 	
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/zR__8wSZUgU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</div>
 		
 		<ul>
 			<div class="row">
