--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@ Cumulio.addDashboard({
 </script>
 
 	<div class=container>
+		<h2></h2>
+		<h2>Thanks to Datawine, improve your</h2>
 		<div class="row">
 			<div class="card-white" class="clo-12 col-sm-6 col-lg-4">
 				<img src="images/productivity.png" alt="productivity">
